Add mathjax to interpret mathml

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<link rel="stylesheet" href="js/browsercast/timeline/timeline.css">
 	<link rel="stylesheet" href="js/browsercast/timeline/glyphicon.css">
 	<link rel="stylesheet" href="js/reveal/css/mystyle.css">
+        <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 </head>
 
 <body>
